--- a/app/globals.scss
+++ b/app/globals.scss
@@ -24,10 +24,12 @@
   --primary-color: #0000a5;
   --blue-1: #0000ff;
   --blue-2: #8080ff;
+  --red-1: #d00000;
+  --red-2: #b00000;
   --gray-1: #303030;
   --gray-2: #606060;
   --gray-3: #909090;
-  --gray-4: #e0e0e0;
+  --gray-4: #cecece;
 }
 
 * {
@@ -49,14 +51,19 @@ a {
 }
 
 input,
-button {
+select {
   height: 3rem;
+  font-family: inherit;
+  padding: .5rem;
+  border: .5px solid var(--gray-3);
+  border-radius: var(--border-radius);
 }
 
 button {
+  height: 3rem;
+  font-family: inherit;
   background-color: var(--blue-1);
   color: var(--white);
-  font-family: inherit;
   font-size: var(--font-size-18);
   text-transform: uppercase;
   border: none;
@@ -83,6 +90,17 @@ button {
   }
 }
 
+.button-reset {
+  background-color: var(--red-1);
+  color: var(--white);
+  border: none;
+
+  &:hover {
+    background-color: var(--red-2);
+    color: var(--white);
+  }
+}
+
 .container {
   padding: 2rem 0;
 
@@ -95,6 +113,10 @@ button {
     font-size: var(--font-size-48);
     font-weight: var(--font-weight-500);
   }
+}
+
+::placeholder {
+  color: var(--gray-4);
 }
 
 @media (prefers-color-scheme: dark) {
