--- a/app/globals.scss
+++ b/app/globals.scss
@@ -30,6 +30,7 @@
   --gray-2: #606060;
   --gray-3: #909090;
   --gray-4: #cecece;
+  --gray-5: #eaeaea;
 }
 
 * {
@@ -40,7 +41,6 @@
 
 html,
 body {
-  padding: 0 4rem;
   max-width: 100vw;
   overflow-x: hidden;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -102,7 +102,8 @@ button {
 }
 
 .container {
-  padding: 2rem 0;
+  padding: 8rem;
+  background: var(--gray-5);
 
   & > *,
   h1, h2, h3, h4, h5, h6, p {
@@ -111,6 +112,11 @@ button {
 
   .font-48-500 {
     font-size: var(--font-size-48);
+    font-weight: var(--font-weight-500);
+  }
+
+  .font-24-500 {
+    font-size: var(--font-size-24);
     font-weight: var(--font-weight-500);
   }
 }
