--- a/app/globals.scss
+++ b/app/globals.scss
@@ -104,6 +104,8 @@ button {
 .container {
   padding: 8rem;
   background: var(--gray-5);
+  height: 100%;
+  min-height: 100dvh;
 
   & > *,
   h1, h2, h3, h4, h5, h6, p {
