--- a/app/globals.scss
+++ b/app/globals.scss
@@ -43,7 +43,6 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 a {
@@ -51,6 +50,7 @@ a {
 }
 
 input,
+.input,
 select {
   height: 3rem;
   font-family: inherit;
@@ -64,10 +64,10 @@ button {
   font-family: inherit;
   background-color: var(--blue-1);
   color: var(--white);
-  font-size: var(--font-size-18);
+  font-size: var(--font-size-16);
   text-transform: uppercase;
   border: none;
-  padding: 1rem;
+  padding: .5rem;
   border-radius: var(--border-radius);
   cursor: pointer;
   display: flex;
@@ -101,8 +101,35 @@ button {
   }
 }
 
+form {
+  background: var(--white);
+  padding: 2rem;
+
+  .formItem {
+    display: flex;
+    flex-direction: column;
+    gap: .3rem;
+
+    input,
+    select {
+      font-size: var(--font-size-16);
+    }
+  }
+}
+
+.twoColumnForm {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+
+  input,
+  select {
+    font-size: var(--font-size-16);
+  }
+}
+
 .container {
-  padding: 4rem;
+  padding: 4rem 8rem;
   background: var(--gray-5);
   height: 100%;
   min-height: 100dvh;
@@ -125,6 +152,27 @@ button {
 
 ::placeholder {
   color: var(--gray-4);
+}
+
+
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00000050;
+  width: 100vw;
+  height: 100vh;
+
+  .modalContainer {
+    width: 50%;
+    padding: 2rem;
+    border-radius: var(--border-radius);
+    background-color: #FFF;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
