--- a/app/globals.scss
+++ b/app/globals.scss
@@ -22,6 +22,7 @@
   --white: #fff;
   --black: #000;
   --primary-color: #0000a5;
+  --success: #008000;
   --blue-1: #0000ff;
   --blue-2: #8080ff;
   --red-1: #d00000;
@@ -172,12 +173,35 @@ h1, h2, h3, h4, h5, h6, p {
     display: grid;
     justify-content: center;
     justify-items: center;
+    text-align: center;
     border-radius: var(--border-radius);
     background-color: #FFF;
+
+    .header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+      border-bottom: 1px solid var(--gray-3);
+
+      .home,
+      .close {
+        cursor: pointer;
+      }
+    }
+
+    .icon {
+      margin-bottom: 1rem;
+    }
 
     .title {
       font-size: var(--font-size-20);
       font-weight: var(--font-weight-500);
+    }
+
+    .buttons {
+      margin-top: 1rem;
     }
   }
 }
