update Requests cards UI

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -23,6 +23,7 @@
   --black: #000;
   --primary-color: #0000a5;
   --success: #008000;
+  --green: #008000;
   --blue-1: #0000ff;
   --blue-2: #8080ff;
   --red-1: #d00000;
