--- a/app/shipping/shipping.module.scss
+++ b/app/shipping/shipping.module.scss
@@ -10,10 +10,32 @@
 				color: var(--gray-3);
 			}
 
-            .buttons {
-                display: flex;
-                gap: 2rem;
-            }
+			.buttons {
+					display: flex;
+					gap: 2rem;
+			}
 		}
 	}
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    text-align: center;
+    
+    .intro {
+      display: flex;
+      flex-direction: column;
+
+			.left {
+				display: none;
+			}
+
+      .right {
+        width: 100%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+      }
+    }
+  }
 }
