--- a/app/globals.scss
+++ b/app/globals.scss
@@ -49,6 +49,9 @@ body {
 
 a {
   text-decoration: none;
+  color: var(--primary-color);
+  padding: 0;
+  margin: 0;
 }
 
 input,
@@ -142,7 +145,7 @@ form {
 }
 
 .container {
-  padding: 4rem 8rem;
+  padding: 2rem 4rem;
   background: var(--gray-5);
   height: 100%;
   min-height: 100dvh;
