--- a/app/shipping/make-request/make-request.module.scss
+++ b/app/shipping/make-request/make-request.module.scss
@@ -31,3 +31,46 @@
 		}
 	}
 }
+
+@media screen and (max-width: 1024px) {
+  .container {
+    text-align: center;
+    
+    .intro {
+      display: flex;
+      flex-direction: column;
+
+      .left {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        div {
+            width: 100%;
+        }
+      }
+
+      .right {
+        display: none;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 968px) {
+    .container {
+        .intro {
+            .left {
+                div {
+                    width: 100%;
+
+                    .requestForm {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                }
+            }
+        }
+    }
+}
