--- a/app/shipping/requests/requests.module.scss
+++ b/app/shipping/requests/requests.module.scss
@@ -38,3 +38,10 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
+@media screen and (max-width: 968px) {
+    .cards {
+        display: flex;
+        flex-direction: column;
+    }
+}
