adjust modal layer

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -181,6 +181,7 @@ h1, h2, h3, h4, h5, h6, p {
   background-color: #00000050;
   width: 100vw;
   height: 100vh;
+  z-index: 1;
 
   .modalContainer {
     width: 40%;
