--- a/app/globals.scss
+++ b/app/globals.scss
@@ -145,10 +145,14 @@ form {
 }
 
 .container {
-  padding: 2rem 4rem;
+  padding: 4rem 8rem;
   background: var(--gray-5);
   height: 100%;
   min-height: 100dvh;
+
+  @media screen and (max-width: 1024px) {
+    padding: 2rem 4rem;
+  }
 }
 
 h1, h2, h3, h4, h5, h6, p {
