prevent user from selecting card text

--- a/app/shipping/requests/requests.module.scss
+++ b/app/shipping/requests/requests.module.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+    user-select: none;
 
     .card {
         background-color: var(--white);
