--- a/app/styles/navbar.module.scss
+++ b/app/styles/navbar.module.scss
@@ -1,6 +1,6 @@
 .container {
     background-color: var(--white);
-    padding: 1rem 4rem;
+    padding: 1rem 8rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,6 +27,10 @@
     .mobileMenu {
         display: none;
         cursor: pointer;
+    }
+
+    @media screen and (max-width: 1024px) {
+        padding: 1rem 4rem;
     }
 }
 
