return secondary button border

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -103,7 +103,7 @@ button {
 .button-secondary {
   background-color: var(--white);
   color: var(--blue-1);
-  // border: 1px solid var(--blue-1);
+  border: 1px solid var(--blue-1);
   position: relative;
   isolation: isolate;
 
