--- a/app/globals.scss
+++ b/app/globals.scss
@@ -47,6 +47,10 @@ body {
   overflow-x: hidden;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+  color: var(--black);
+}
+
 a {
   text-decoration: none;
   color: var(--primary-color);
