--- a/app/styles/navbar.module.scss
+++ b/app/styles/navbar.module.scss
@@ -10,6 +10,7 @@
             font-size: 28px;
             margin: 0;
             padding: 0;
+            color: var(--primary-color);
         }
     }
 
